minor code style fixes